Fix horizontal overflow of boards html container with too many task lists

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 html, body {
     background: #0089d7 !important;
+    height: 100%;
 }
 
 .gray-medium {
